--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,21 @@
 .highlight-black {
     box-shadow: inset 0 0 3px 3px blue;
 }
+
+.highlight-hint {
+    box-shadow: inset 0 0 3px 3px red;
+}
+
+.no-underline {
+    text-decoration: none;
+}
+
+.no-outline:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.btn-header {
+    font-size: 20px;
+    font-weight: bold;
+}
